// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderer should render table of contents 1`] = `
<div>
  <div>
    <nav>
      <div>
        <input
          aria-label="Filter by name"
          onChange={[Function]}
          placeholder="Filter by name"
          value="foo"
        />
      </div>
      <div>
        foo
      </div>
    </nav>
  </div>
</div>
`;

exports[`should filter list when search field contains a query 1`] = `
<Styled(TableOfContents)
  onSearchTermChange={[Function]}
  searchTerm=""
>
  <ComponentsList
    hashPath={Array []}
    items={
      Array [
        Object {
          "components": Array [],
          "content": undefined,
          "forcedOpen": false,
          "heading": false,
          "initialOpen": true,
          "name": "Button",
          "sections": Array [],
          "selected": false,
          "shouldOpenInNewTab": false,
          "slug": "button",
        },
        Object {
          "components": Array [],
          "content": undefined,
          "forcedOpen": false,
          "heading": false,
          "initialOpen": true,
          "name": "Input",
          "sections": Array [],
          "selected": false,
          "shouldOpenInNewTab": false,
          "slug": "input",
        },
        Object {
          "components": Array [],
          "content": undefined,
          "forcedOpen": false,
          "heading": false,
          "initialOpen": true,
          "name": "Textarea",
          "sections": Array [],
          "selected": false,
          "shouldOpenInNewTab": false,
          "slug": "textarea",
        },
      ]
    }
    useHashId={false}
    useRouterLinks={false}
  />
</Styled(TableOfContents)>
`;

exports[`should filter list when search field contains a query 2`] = `
<Styled(TableOfContents)
  onSearchTermChange={[Function]}
  searchTerm="but"
>
  <ComponentsList
    hashPath={Array []}
    items={
      Array [
        Object {
          "components": Array [],
          "content": undefined,
          "forcedOpen": true,
          "heading": false,
          "initialOpen": true,
          "name": "Button",
          "sections": Array [],
          "selected": false,
          "shouldOpenInNewTab": false,
          "slug": "button",
        },
      ]
    }
    useHashId={false}
    useRouterLinks={false}
  />
</Styled(TableOfContents)>
`;

exports[`should filter section names 1`] = `
<Styled(TableOfContents)
  onSearchTermChange={[Function]}
  searchTerm=""
>
  <ComponentsList
    hashPath={Array []}
    items={
      Array [
        Object {
          "components": Array [],
          "content": undefined,
          "forcedOpen": false,
          "heading": false,
          "initialOpen": true,
          "name": "Introduction",
          "sections": Array [],
          "selected": false,
          "shouldOpenInNewTab": false,
          "slug": "introduction",
        },
        Object {
          "components": Array [
            Object {
              "name": "Button",
              "slug": "button",
            },
          ],
          "content": <ComponentsList
            hashPath={
              Array [
                "Buttons",
              ]
            }
            items={
              Array [
                Object {
                  "content": undefined,
                  "forcedOpen": false,
                  "heading": false,
                  "initialOpen": true,
                  "name": "Button",
                  "selected": false,
                  "shouldOpenInNewTab": false,
                  "slug": "button",
                },
              ]
            }
            useHashId={true}
            useRouterLinks={false}
          />,
          "forcedOpen": false,
          "heading": true,
          "initialOpen": true,
          "name": "Buttons",
          "sections": Array [],
          "selected": false,
          "shouldOpenInNewTab": false,
          "slug": "buttons",
        },
        Object {
          "components": Array [
            Object {
              "name": "Input",
              "slug": "input",
            },
            Object {
              "name": "Textarea",
              "slug": "textarea",
            },
          ],
          "content": <ComponentsList
            hashPath={
              Array [
                "Forms",
              ]
            }
            items={
              Array [
                Object {
                  "content": undefined,
                  "forcedOpen": false,
                  "heading": false,
                  "initialOpen": true,
                  "name": "Input",
                  "selected": false,
                  "shouldOpenInNewTab": false,
                  "slug": "input",
                },
                Object {
                  "content": undefined,
                  "forcedOpen": false,
                  "heading": false,
                  "initialOpen": true,
                  "name": "Textarea",
                  "selected": false,
                  "shouldOpenInNewTab": false,
                  "slug": "textarea",
                },
              ]
            }
            useHashId={true}
            useRouterLinks={false}
          />,
          "forcedOpen": false,
          "heading": true,
          "initialOpen": true,
          "name": "Forms",
          "sections": Array [],
          "selected": false,
          "shouldOpenInNewTab": false,
          "slug": "forms",
        },
      ]
    }
    useHashId={false}
    useRouterLinks={false}
  />
</Styled(TableOfContents)>
`;

exports[`should filter section names 2`] = `
<Styled(TableOfContents)
  onSearchTermChange={[Function]}
  searchTerm="frm"
>
  <ComponentsList
    hashPath={Array []}
    items={
      Array [
        Object {
          "components": Array [],
          "content": undefined,
          "forcedOpen": true,
          "heading": false,
          "initialOpen": true,
          "name": "Forms",
          "sections": Array [],
          "selected": false,
          "shouldOpenInNewTab": false,
          "slug": "forms",
        },
      ]
    }
    useHashId={false}
    useRouterLinks={false}
  />
</Styled(TableOfContents)>
`;

exports[`should render a renderer 1`] = `
<Styled(TableOfContents)
  onSearchTermChange={[Function]}
  searchTerm=""
>
  <ComponentsList
    hashPath={Array []}
    items={
      Array [
        Object {
          "components": Array [],
          "content": undefined,
          "forcedOpen": false,
          "heading": false,
          "initialOpen": true,
          "name": "Button",
          "sections": Array [],
          "selected": false,
          "shouldOpenInNewTab": false,
          "slug": "button",
        },
        Object {
          "components": Array [],
          "content": undefined,
          "forcedOpen": false,
          "heading": false,
          "initialOpen": true,
          "name": "Input",
          "sections": Array [],
          "selected": false,
          "shouldOpenInNewTab": false,
          "slug": "input",
        },
        Object {
          "components": Array [],
          "content": undefined,
          "forcedOpen": false,
          "heading": false,
          "initialOpen": true,
          "name": "Textarea",
          "sections": Array [],
          "selected": false,
          "shouldOpenInNewTab": false,
          "slug": "textarea",
        },
      ]
    }
    useHashId={false}
    useRouterLinks={false}
  />
</Styled(TableOfContents)>
`;

exports[`should render renderer with sections with nested components 1`] = `
<Styled(TableOfContents)
  onSearchTermChange={[Function]}
  searchTerm=""
>
  <ComponentsList
    hashPath={Array []}
    items={
      Array [
        Object {
          "components": Array [],
          "content": undefined,
          "forcedOpen": false,
          "heading": false,
          "initialOpen": true,
          "name": "Introduction",
          "sections": Array [],
          "selected": false,
          "shouldOpenInNewTab": false,
          "slug": "introduction",
        },
        Object {
          "components": Array [
            Object {
              "name": "Button",
              "slug": "button",
            },
          ],
          "content": <ComponentsList
            hashPath={
              Array [
                "Buttons",
              ]
            }
            items={
              Array [
                Object {
                  "content": undefined,
                  "forcedOpen": false,
                  "heading": false,
                  "initialOpen": true,
                  "name": "Button",
                  "selected": false,
                  "shouldOpenInNewTab": false,
                  "slug": "button",
                },
              ]
            }
            useHashId={true}
            useRouterLinks={false}
          />,
          "forcedOpen": false,
          "heading": true,
          "initialOpen": true,
          "name": "Buttons",
          "sections": Array [],
          "selected": false,
          "shouldOpenInNewTab": false,
          "slug": "buttons",
        },
        Object {
          "components": Array [
            Object {
              "name": "Input",
              "slug": "input",
            },
            Object {
              "name": "Textarea",
              "slug": "textarea",
            },
          ],
          "content": <ComponentsList
            hashPath={
              Array [
                "Forms",
              ]
            }
            items={
              Array [
                Object {
                  "content": undefined,
                  "forcedOpen": false,
                  "heading": false,
                  "initialOpen": true,
                  "name": "Input",
                  "selected": false,
                  "shouldOpenInNewTab": false,
                  "slug": "input",
                },
                Object {
                  "content": undefined,
                  "forcedOpen": false,
                  "heading": false,
                  "initialOpen": true,
                  "name": "Textarea",
                  "selected": false,
                  "shouldOpenInNewTab": false,
                  "slug": "textarea",
                },
              ]
            }
            useHashId={true}
            useRouterLinks={false}
          />,
          "forcedOpen": false,
          "heading": true,
          "initialOpen": true,
          "name": "Forms",
          "sections": Array [],
          "selected": false,
          "shouldOpenInNewTab": false,
          "slug": "forms",
        },
      ]
    }
    useHashId={false}
    useRouterLinks={false}
  />
</Styled(TableOfContents)>
`;
